--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ BuildupDatebase*
 Source/GroupTheory/CGCsnewsu2.pickle
 Source/GroupTheory/CGCsnewsu3.pickle
 Source/GroupTheory/CGCsnewsu4.pickle
+Source/GroupTheory/CGCsnewsu5.pickle
 Source/GroupTheory/change_matrices.py
 Source/GroupTheory/combine-database.py
 Source/GroupTheory/contraction-15-15-15-s.py
