--- a/.gitignore
+++ b/.gitignore
@@ -12,20 +12,19 @@ models/private/
 *.m
 *.nb
 
-Source/GroupTheory/CGCsnewsu2.pickle
-Source/GroupTheory/CGCsnewsu3.pickle
-Source/GroupTheory/CGCsnewsu4.pickle
-Source/GroupTheory/CGCsnewsu5.pickle
-Source/GroupTheory/CGCsoldextractedsu6.pickle
-Source/GroupTheory/change_matrices.py
-Source/GroupTheory/contraction-15-15-15-s.py
-Source/GroupTheory/update-database.py
-Source/GroupTheory/.ipynb_checkpoints/
-Source/GroupTheory/combine-database.py
+change_matrices.py
+contraction-15-15-15-s.py
+update-database.py
+.ipynb_checkpoints/
+combine-database.py
+CGCsnewsu2v34.py
+*.pickle
 *.DS_Store
 *.swp
 #logfiles
 logFile*.log
 .idea
 .ipynb_checkpoints
-Source/GroupTheory/CGCs-su2-8.pickle
+test*
+RunPyRate_RGEs.m_bck
+RGEsmathModule.py_bck
