--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/pylie"]
 	path = src/pylie
-	url = https://dibus2@bitbucket.org/dibus2/pylie.git
+	url = https://github.com/dibus2/pylie.git
